Fri May 28 11:40:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Do not rely on GC, t0 should be
	  checked explicitly.

Fri May 28 10:40:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (checking_for): ignore toplevel.

Fri May 28 00:47:16 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* error.c (rb_bug): suppress the error report dialog if report_bug() 
	  is finished successfly.

Fri May 28 00:32:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* insns.def (invokesuper): check consistency between class of self and
	  class of method being invoked by super.  This is temporary measure
	  for YARV.  See [ruby-core:30313] in detail.  See [ruby-dev:40959]
	  [ruby-dev:39772] [ruby-core:27000] [ruby-core:27230]

	* vm_insnhelper.c (vm_search_superclass): ditto.

Thu May 27 23:38:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_home_dir): set filesystem encoding.

Thu May 27 23:29:18 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): set encoding as the same of fname
	  when _result_ is not filesystem encoding. [ruby-dev:41429]

Thu May 27 23:07:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): use rb_enc_associate_index and
	  rb_filesystem_encindex. Strings related FileSystem should
	  have filesystem_encoding.

	* file.c (SET_EXTERNAL_ENCODING): removed.

Thu May 27 23:03:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/encoding.h (rb_filesystem_encindex): defined.

	* include/ruby/encoding.h (rb_locale_encindex): ditto.

	* encoding.c (rb_filesystem_encindex): remove static.

	* encoding.c (rb_locale_encindex): ditto.

Thu May 27 22:34:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): call ReadFile() with len = 0 before
	  reading really on console, because the first ReadFile() call after
	  PeekConsoleInput() always returns broken data. (Windows's bug).
	  [ruby-core:29018]
