@@ -1,3 +1,8 @@
+Fri May 28 17:34:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* array.c (rb_ary_product): Use tmpary instead, to ensure marking
+	  arrays by GC.
+
 Fri May 28 11:40:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* array.c (rb_ary_product): Do not rely on GC, t0 should be
